Colaboratory를 통해 생성됨

--- a/01_퍼셉트론_신경망.ipynb
+++ b/01_퍼셉트론_신경망.ipynb
@@ -6,7 +6,8 @@
       "name": "01_퍼셉트론.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMNv9HEpgWhetL+9kHIncv0",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPpj7qpwO0hbrLTKMQlRppG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +31,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VT2D2MpftEiX",
-        "outputId": "95f4ac74-8904-4129-d301-c49a54434dec"
+        "outputId": "655ff062-a827-46f8-d7c7-ff5565eea156"
       },
       "outputs": [
         {
@@ -92,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IwV_9mUGuOnk",
-        "outputId": "daf12ba2-0e6e-49a6-f8ad-53e3ea27f936"
+        "outputId": "7a214926-939f-4649-872e-96e53fac8423"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,9 +132,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v-aPwaZEvtg5",
-        "outputId": "c7c1ef34-8c23-4695-eb02-5602c495c727"
+        "outputId": "a40bc60b-b576-4b08-b0b0-2f7c89fb1406"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WebgiG8dwQWF",
-        "outputId": "dffe2afc-51c8-44ed-b98c-8ef46767f73d"
+        "outputId": "56ddf489-3a3a-4ce9-9c9c-be2a390a8867"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +243,7 @@
       "metadata": {
         "id": "YYfaaEg8xFBK"
       },
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -269,9 +270,9 @@
           "height": 265
         },
         "id": "S7g6A2-FoRLn",
-        "outputId": "74a87d8f-6a6c-4502-c277-8c4fa085ba1a"
+        "outputId": "86512248-aa20-4178-faa3-79872a0adee4"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -320,9 +321,9 @@
           "height": 265
         },
         "id": "LPzsMoAfogTp",
-        "outputId": "747b9e91-ff8f-4221-91e5-457a6e80b721"
+        "outputId": "40d63fc2-3e2d-438b-a4f1-065fd632e226"
       },
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -365,9 +366,9 @@
           "height": 265
         },
         "id": "AL0w2NrbphkZ",
-        "outputId": "161968f1-f5f0-4749-993a-77b86193c80a"
+        "outputId": "3b5d5ad0-1717-4c60-b74a-8bc472d6b20a"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -418,9 +419,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PRX2Qqr5rYdd",
-        "outputId": "d8edc816-eae6-49db-9506-9c12a13688ae"
+        "outputId": "7d8202e5-c2d4-46ba-a7e4-b178b3131245"
       },
-      "execution_count": 68,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,9 +501,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0tIeQdfQs3e1",
-        "outputId": "00b6b694-d0ef-4880-f5b9-d3f8550c5ec5"
+        "outputId": "ce97db34-855c-4115-ea6f-686af281a687"
       },
-      "execution_count": 71,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,9 +573,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XEaBSPLztsxX",
-        "outputId": "573fed21-dbcc-4741-dca6-078026ec3b35"
+        "outputId": "f7f1a3dd-527b-4245-826c-89ff2434ab53"
       },
-      "execution_count": 72,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -592,10 +593,11 @@
         "\n",
         "1. 회귀 : 항등 함수 ( identity function ), 소프트맥스 함수 ( softmax function )\n",
         "2. 분류\n",
-        "  - 소프트맥스 : 출력 총합이 1이된다. ( 출력값을 확률로 계산할 수 있다. )\n",
+        "  - 소프트맥스 : 출력 총합이 1이된다. ( 출력값을 **확률**로 계산할 수 있다. )\n",
         "    - 지수 함수를 계산할 때 어떤 정수를 더하거나 빼더라도 결과는 바뀌지 않는다.\n",
         "    - verflow를 막기 위해 입력 신호 중 최댓값을 이용하는 것이 일반적이다.\n",
         "    - input 값에 input의 최댓값을 빼서 0에 근사하게 만들어 overflow 방지\n",
+        "    - softmax를 적용한 뒤 가장 큰 값을 내는 것이기 때문에, softmax를 생략하고 max값을 구하여 자원 낭비를 줄이기도 한다.(출력이 가장 큰 뉴런의 위치는 달라지지 않기 때문이다)\n",
         "\n"
       ],
       "metadata": {
@@ -616,19 +618,35 @@
       "metadata": {
         "id": "MVG5nfbG1W8q"
       },
-      "execution_count": 73,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "a = np.array([0.3, 2.9, 4.0])\n",
+        "y = softmax(a)\n",
+        "print(y)\n",
+        "print(f'sum : {np.sum(y)}')"
       ],
       "metadata": {
-        "id": "fdYa45sr2dmK"
+        "id": "fdYa45sr2dmK",
+        "outputId": "c18e7811-06aa-4d6c-9f62-7cc6367047db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.01821127 0.24519181 0.73659691]\n",
+            "sum : 1.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
